Fix #41 resolve navbar clipping

--- a/less/course.less
+++ b/less/course.less
@@ -43,10 +43,6 @@ nav.breadcrumb-nav {
     }
 }
 
-#moodle-navbar {
-    border-color: @brand-primary;
-}
-
 @media (max-width: @screen-sm-min) {
     h3.sectionname {
         margin-left: 20px;
