--- a/less/navbar.less
+++ b/less/navbar.less
@@ -24,7 +24,7 @@ a.navbar-brand {
 }
 
 #moodle-navbar {
-    margin-right: -15px;
+    border-color: @brand-primary;
 }
 
 .nav > li:last-child > a {
